add build testing targets to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ set_target_properties (camp PROPERTIES
   INTERFACE_LIB_VERSION $camp_VERSION
   INTERFACE_COMPILE_FEATURES cxx_std_14)
 
+enable_testing()
+add_subdirectory(test)
