make cuda testing possible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,14 @@ project (camp
   LANGUAGES CXX
   VERSION 0.1.0)
 
+option(ENABLE_CUDA "whether to build with cuda" Off)
+
+if(ENABLE_CUDA)
+  include(CheckLanguage)
+  check_language(CUDA)
+  enable_language(CUDA)
+endif()
+
 add_library (camp INTERFACE)
 target_include_directories (camp INTERFACE include)
 set_target_properties (camp PROPERTIES
