--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,18 +4,21 @@ if(ENABLE_CUDA)
   # detection in gtest
   set(gtest_disable_pthreads On)
 endif()
-add_subdirectory("${PROJECT_SOURCE_DIR}/extern/googletest" "extern/googletest"
-  EXCLUDE_FROM_ALL)
 
-mark_as_advanced(
-  BUILD_GMOCK BUILD_GTEST BUILD_SHARED_LIBS
-  gmock_build_tests gtest_build_samples gtest_build_tests
-  gtest_disable_pthreads gtest_force_shared_crt gtest_hide_internal_symbols
-  )
-set_target_properties(gtest PROPERTIES FOLDER extern)
-set_target_properties(gtest_main PROPERTIES FOLDER extern)
-set_target_properties(gmock PROPERTIES FOLDER extern)
-set_target_properties(gmock_main PROPERTIES FOLDER extern)
+if (NOT TARGET gtest)
+  add_subdirectory("${PROJECT_SOURCE_DIR}/extern/googletest" "extern/googletest"
+    EXCLUDE_FROM_ALL)
+
+  mark_as_advanced(
+    BUILD_GMOCK BUILD_GTEST BUILD_SHARED_LIBS
+    gmock_build_tests gtest_build_samples gtest_build_tests
+    gtest_disable_pthreads gtest_force_shared_crt gtest_hide_internal_symbols
+    )
+  set_target_properties(gtest PROPERTIES FOLDER extern)
+  set_target_properties(gtest_main PROPERTIES FOLDER extern)
+  set_target_properties(gmock PROPERTIES FOLDER extern)
+  set_target_properties(gmock_main PROPERTIES FOLDER extern)
+endif (NOT TARGET gtest)
 
 function(camp_add_gtest TESTNAME)
   add_executable(${TESTNAME} ${ARGN})
