fix clang-cuda/cuda handling with and without BLT and add checks for clang sanity

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,12 +36,6 @@ function(camp_add_test TESTNAME)
     list(REMOVE_DUPLICATES ABT_BUILD)
   endif()
 
-  if(ENABLE_CUDA)
-    set(source_files ${ABT_BUILD})
-    list(FILTER source_files INCLUDE REGEX ".*\.cpp$")
-    set_source_files_properties( ${source_files} PROPERTIES LANGUAGE CUDA )
-  endif()
-
 
   # target that is run by the test, build and run
   if(ABT_GTEST OR ABT_RUN)
@@ -63,6 +57,21 @@ function(camp_add_test TESTNAME)
 
   # Add interface library for includes
   target_link_libraries(${TESTNAME} camp)
+
+  if(ENABLE_CUDA)
+    set(source_files ${ABT_BUILD})
+    list(FILTER source_files INCLUDE REGEX ".*\.cpp$")
+    if(NOT ENABLE_CLANG_CUDA)
+      set_source_files_properties( ${source_files} PROPERTIES LANGUAGE CUDA )
+    else()
+      if(BLT_LOADED)
+        target_link_libraries(${TESTNAME} cuda)
+      else()
+        target_link_libraries(${TESTNAME} camp_cuda)
+      endif()
+    endif()
+  endif()
+
 
   if(ABT_GTEST)
     target_link_libraries(${TESTNAME} gtest gtest_main)
