--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,31 @@ project (camp
   VERSION 0.1.0)
 
 option(ENABLE_CUDA "whether to build with cuda" Off)
+option(ENABLE_CLANG_CUDA "use clang cuda support rather than nvcc" Off)
+
+if(ENABLE_CLANG_CUDA)
+  if(NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
+    message(ERROR "clang cuda can only be used with clang")
+  endif()
+endif()
 
 if(ENABLE_CUDA)
-  include(CheckLanguage)
-  check_language(CUDA)
-  enable_language(CUDA)
+  find_package(CUDA REQUIRED)
+  if(NOT ENABLE_CLANG_CUDA)
+    include(CheckLanguage)
+    check_language(CUDA)
+    enable_language(CUDA)
+  else()
+    if(NOT CUDA_ARCH)
+      set(CUDA_ARCH "sm_35")
+    endif()
+    set (_cuda_compile_flags -x cuda --cuda-gpu-arch=${CUDA_ARCH} --cuda-path=${CUDA_TOOLKIT_ROOT_DIR})
+    add_library(camp_cuda INTERFACE)
+    target_compile_options(camp_cuda INTERFACE ${_cuda_compile_flags})
+    target_link_libraries(camp_cuda INTERFACE ${CUDA_LIBRARIES})
+    target_include_directories(camp_cuda INTERFACE ${CUDA_INCLUDE_DIRS})
+    message(STATUS "CUDA LIBS: ${CUDA_LIBRARIES}")
+  endif(NOT ENABLE_CLANG_CUDA)
 endif()
 
 add_library (camp INTERFACE)
