link tests with nvcc when cuda is enabled and clang-cuda is not

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -63,6 +63,7 @@ function(camp_add_test TESTNAME)
     list(FILTER source_files INCLUDE REGEX ".*\.cpp$")
     if(NOT ENABLE_CLANG_CUDA)
       set_source_files_properties( ${source_files} PROPERTIES LANGUAGE CUDA )
+      set_target_properties( ${TESTNAME} PROPERTIES LINKER_LANGUAGE CUDA)
     else()
       if(BLT_LOADED)
         target_link_libraries(${TESTNAME} cuda)
