concepts: refactor convertible_to out to is_convertible
This is the beginning of a relatively large concepts/type-traits refactor that is going to come in over the next while. First is factoring out convertible_to so it looks/works more like the standard library version so I can start converting detector into a more user-friendly version we can actually expose.  This is a bug for GEOSX and others, and should also make our type_traits more robust once it's all in.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -117,6 +117,7 @@ camp_add_test(tuple_out_of_range RUN)
 
 camp_add_test(accumulate)
 camp_add_test(at_key)
+camp_add_test(convertible)
 camp_add_test(filter)
 camp_add_test(find_if)
 camp_add_test(flatten)
