add test.runner target

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -111,6 +111,11 @@ endfunction()
 if(ENABLE_CUDA)
   camp_add_test(resource GTEST)
 endif()
+
+add_custom_target(test.runner
+        COMMAND ${CMAKE_COMMAND} --build . --target test --config ${CMAKE_BUILD_TYPE}
+        WORKING_DIRECTORY ${CURRENT_BINARY_DIR}
+        )
 camp_add_test(tuple GTEST)
 
 camp_add_test(tuple_out_of_range RUN)
