remove unnecessary, CACHE BOOL from cmake lines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project (camp
   LANGUAGES CXX
   VERSION 0.1.0)
 
-option(ENABLE_CUDA "whether to build with cuda" Off CACHE BOOL)
-option(ENABLE_CLANG_CUDA "use clang cuda support rather than nvcc" Off CACHE BOOL)
-option(ENABLE_HIP "whether to build with hip" Off CACHE BOOL)
-option(ENABLE_TARGET_OPENMP "whether to build with OpenMP offload" Off CACHE BOOL)
-option(ENABLE_TESTS "whether to configure and build tests" On CACHE BOOL)
+option(ENABLE_CUDA "whether to build with cuda" Off)
+option(ENABLE_CLANG_CUDA "use clang cuda support rather than nvcc" Off)
+option(ENABLE_HIP "whether to build with hip" Off)
+option(ENABLE_TARGET_OPENMP "whether to build with OpenMP offload" Off)
+option(ENABLE_TESTS "whether to configure and build tests" On)
 
 if(ENABLE_CLANG_CUDA)
   if(NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
