ensure gtest uses shared libs to avoid msvc errors

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Build google test
 if (NOT TARGET gtest)
+  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
   add_subdirectory("${PROJECT_SOURCE_DIR}/extern/googletest" "extern/googletest"
     EXCLUDE_FROM_ALL)
 
