--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project (camp
 option(ENABLE_CUDA "whether to build with cuda" Off)
 option(ENABLE_CLANG_CUDA "use clang cuda support rather than nvcc" Off)
 option(ENABLE_HIP "whether to build with hip" Off)
+option(ENABLE_SYCL "whether to build with sycl" Off)
 option(ENABLE_TARGET_OPENMP "whether to build with OpenMP offload" Off)
 option(ENABLE_TESTS "whether to configure and build tests" On)
 
