ENH: Add "CAMP_" prefix to "ENABLE_TESTS" option
The "ENABLE_TESTS" option is named too generically which leads to
name collisions when camp is used a sub-module within another
project. As a result, the CAMP tests will always be run with
the tests of the super-project, which may be using the same
option. Notably, BLT has also an option "ENABLE_TESTS", so
any BLT project that uses camp as a submodule will run into this.
This commit renames this option in order to give parent projects
more fine-grain control of whether to build CAMP's tests or not.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ option(ENABLE_CLANG_CUDA "use clang cuda support rather than nvcc" Off)
 option(ENABLE_HIP "whether to build with hip" Off)
 option(ENABLE_SYCL "whether to build with sycl" Off)
 option(ENABLE_TARGET_OPENMP "whether to build with OpenMP offload" Off)
-option(ENABLE_TESTS "whether to configure and build tests" On)
+option(CAMP_ENABLE_TESTS "whether to configure and build tests" On)
 
 if(ENABLE_CLANG_CUDA)
   if(NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
@@ -81,7 +81,7 @@ install(DIRECTORY
   DESTINATION
   include)
 
-if(ENABLE_TESTS)
+if(CAMP_ENABLE_TESTS)
 enable_testing()
 add_subdirectory(test)
 endif()
