remove artifacts for now, still need docker registry access to fix rate limits

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ jobs:
     matrix:
       gcc6:
         docker_target: gcc6
-      gcc6-debug:
+      gcc5-debug:
         docker_target: gcc5-debug
       gcc7:
         docker_target: gcc7
@@ -75,17 +75,17 @@ jobs:
       command: build
       dockerFile: 'Dockerfile'
       arguments: '--target $(docker_target)'
-  - script: |
-      CID=$(docker create llnl/raja:$(Build.BuildId))
-      echo ${CID}
-      docker cp ${CID}:/home/axom/workspace/build local-build
-      docker rm ${CID}
-    displayName: 'Copy test artifacts'
-    condition: ne( variables['docker_target'], 'nvcc')
-  - script: |
-      bash <(curl -s https://raw.githubusercontent.com/codecov/codecov-bash/0b376529f626b50b7d4a9fb734e0e50d28b9b91e/codecov) >& /dev/null
-    displayName: 'Upload code coverage'
-    condition: eq( variables['docker_target'], 'gcc')
+  # - script: |
+  #     CID=$(docker create llnl/raja:$(Build.BuildId))
+  #     echo ${CID}
+  #     docker cp ${CID}:/home/axom/workspace/build local-build
+  #     docker rm ${CID}
+  #   displayName: 'Copy test artifacts'
+  #   condition: ne( variables['docker_target'], 'nvcc')
+  # - script: |
+  #     bash <(curl -s https://raw.githubusercontent.com/codecov/codecov-bash/0b376529f626b50b7d4a9fb734e0e50d28b9b91e/codecov) >& /dev/null
+  #   displayName: 'Upload code coverage'
+  #   condition: eq( variables['docker_target'], 'gcc')
   - task: PublishTestResults@2
     inputs:
       testResultsFormat: 'cTest'
