update test cmake file, before removing test-time compiles

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 function(camp_add_test TESTNAME)
-  cmake_parse_arguments(ABT "GTEST;RUN" "" "BUILD;TEST" ${ARGN})
+  cmake_parse_arguments(ABT "GTEST;RUN;OFFLOAD" "" "BUILD;TEST" ${ARGN})
 
 
   if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${TESTNAME}.cpp")
@@ -15,53 +15,34 @@ function(camp_add_test TESTNAME)
   endif()
 
   set(_depends camp gtest)
-  # target that is run by the test, build and run
-  if(ABT_GTEST OR ABT_RUN)
-    # Actual build setup, do not build by default
-    blt_add_executable(
-      NAME ${TESTNAME}
-      SOURCES ${ABT_BUILD}
-      DEPENDS_ON ${_depends})
-    set_target_properties( ${TESTNAME} PROPERTIES EXCLUDE_FROM_ALL On)
-    add_custom_target(${TESTNAME}.runner
-      COMMAND ${CMAKE_COMMAND} --build . --target ${TESTNAME} --config ${TEST_BUILD_TYPE}
-      COMMAND "$<TARGET_FILE:${TESTNAME}>"
-      WORKING_DIRECTORY ${CURRENT_BINARY_DIR}
-      )
-  else()
-    # Actual build setup, do not build by default, use a lib so no main required
-    blt_add_executable(
-      NAME ${TESTNAME}
-      SOURCES ${ABT_BUILD}
-      DEPENDS_ON ${_depends})
-    add_custom_target(${TESTNAME}.runner
-      COMMAND ${CMAKE_COMMAND} --build . --target ${TESTNAME} --config ${TEST_BUILD_TYPE}
-      WORKING_DIRECTORY ${CURRENT_BINARY_DIR}
-      )
-  endif()
 
-  if(ENABLE_CUDA)
-    set(source_files ${ABT_BUILD})
-    list(FILTER source_files INCLUDE REGEX ".*\.cpp$")
-    if(NOT ENABLE_CLANG_CUDA)
-      set_source_files_properties( ${source_files} PROPERTIES LANGUAGE CUDA )
-      set_target_properties( ${TESTNAME} PROPERTIES LINKER_LANGUAGE CUDA)
-    else()
-      if(BLT_LOADED)
-        target_link_libraries(${TESTNAME} cuda)
-      else()
-        target_link_libraries(${TESTNAME} camp_cuda)
-      endif()
-    endif()
-  endif()
+  # Actual build setup, do not build by default
+  blt_add_executable(
+    NAME ${TESTNAME}
+    SOURCES ${ABT_BUILD}
+    DEPENDS_ON ${_depends})
+  set_target_properties( ${TESTNAME} PROPERTIES EXCLUDE_FROM_ALL On)
+  set_target_properties(${TESTNAME} PROPERTIES FOLDER test)
 
+  # allow masking of offload tests in CI
+  if(ABT_OFFLOAD)
+    set(TESTNAME_QUAL ${TESTNAME}.offload)
+  else(ABT_OFFLOAD)
+    set(TESTNAME_QUAL ${TESTNAME})
+  endif(ABT_OFFLOAD)
+
+  # target that is run by the test, build or run or both
+  add_custom_target(${TESTNAME_QUAL}.runner
+    COMMAND "$<TARGET_FILE:${TESTNAME}>"
+    DEPENDS ${TESTNAME}
+    WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
+    )
 
   # The test itself, invoke the runner
-  add_test(NAME ${TESTNAME}
-    COMMAND ${CMAKE_COMMAND} --build . --target ${TESTNAME}.runner
-    WORKING_DIRECTORY ${CURRENT_BINARY_DIR}
+  add_test(NAME ${TESTNAME_QUAL}
+    COMMAND ${CMAKE_COMMAND} --build . --target ${TESTNAME_QUAL}.runner
+    WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
     ${TEST})
-  set_target_properties(${TESTNAME} PROPERTIES FOLDER test)
 
   list(GET ABT_BUILD 0 source_file)
   if(NOT source_file)
@@ -75,18 +56,18 @@ function(camp_add_test TESTNAME)
       continue()
     endif()
     if(CMAKE_MATCH_1 STREQUAL "WILL_FAIL")
-      set_tests_properties(${TESTNAME} PROPERTIES WILL_FAIL)
+      set_tests_properties(${TESTNAME_QUAL} PROPERTIES WILL_FAIL)
     elseif(CMAKE_MATCH_1 STREQUAL "PASS_REGEX")
-      set_tests_properties(${TESTNAME} PROPERTIES
+      set_tests_properties(${TESTNAME_QUAL} PROPERTIES
         PASS_REGULAR_EXPRESSION "${CMAKE_MATCH_2}")
     elseif(CMAKE_MATCH_1 STREQUAL "FAIL_REGEX")
-      set_tests_properties(${TESTNAME} PROPERTIES
+      set_tests_properties(${TESTNAME_QUAL} PROPERTIES
         FAIL_REGULAR_EXPRESSION "${CMAKE_MATCH_2}")
     endif()
   endforeach()
 endfunction()
 
-camp_add_test(resource GTEST)
+camp_add_test(resource GTEST OFFLOAD)
 camp_add_test(tuple GTEST)
 
 camp_add_test(tuple_out_of_range RUN)
