do not run offload tests in CI, just build them

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ variables:
   ver: latest
   pre_cmd: true
   build_type: RelWithDebInfo
-  ctest_extra: "-E offload -E 'blt.*smoke'"
+  ctest_extra: "-E '(.*offload|blt.*smoke)'"
   cmake_extra: ""
   parallel: 4
   cmake_build_opts: "--build build --parallel $(parallel)"
