use git bash rather than wsl bash

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,14 +22,20 @@ if (CAMP_ENABLE_TESTS AND DEFINED ENABLE_TESTS)
   set(CAMP_ENABLE_TESTS ${ENABLE_TESTS})
 endif()
 
+if (WIN32)
+  # use git-bash for windows, wsl is not populated on azure
+  set(BASH "C:/Program Files/Git/bin/bash.exe")
+else()
+  set(BASH "bash")
+endif()
 # generate list of headers at configure time, no this is not perfect
 # note that this *DOES* work on windows if bash is installed, which
 # it is on azure
-execute_process(COMMAND bash ${PROJECT_SOURCE_DIR}/scripts/gen-header-list.sh
+execute_process(COMMAND ${BASH} ${PROJECT_SOURCE_DIR}/scripts/gen-header-list.sh
   OUTPUT_FILE ${PROJECT_BINARY_DIR}/camp_headers.cmake
   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
   )
-execute_process(COMMAND bash ${PROJECT_SOURCE_DIR}/scripts/gen-header-list.sh
+execute_process(COMMAND ${BASH} ${PROJECT_SOURCE_DIR}/scripts/gen-header-list.sh
   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
   )
 include(${PROJECT_BINARY_DIR}/camp_headers.cmake)
