update compilers in pipelines and tweak dockerfile

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,14 +49,10 @@ jobs:
   timeoutInMinutes: 360
   strategy:
     matrix:
-      gcc6:
+      gcc8-debug:
         base_img: gcc
-        ver: 6
-        cmake_extra: -DENABLE_TBB=On -DRAJA_DEPRECATED_TESTS=On -DRAJA_ENABLE_RUNTIME_PLUGINS=On 
-      gcc6-debug:
-        base_img: gcc
-        ver: 6
-        cmake_extra: -DENABLE_TBB=On -DRAJA_DEPRECATED_TESTS=On -DENABLE_WARNINGS_AS_ERRORS=On -DENABLE_COVERAGE=On
+        ver: 8
+        cmake_extra: -DENABLE_WARNINGS_AS_ERRORS=On -DENABLE_COVERAGE=On
         build_type: Debug
       gcc8:
         base_img: gcc
@@ -64,15 +60,15 @@ jobs:
       gcc-latest:
         base_img: gcc
         ver: latest
-        cmake_extra: -DENABLE_TBB=On -DRAJA_DEPRECATED_TESTS=On -DRAJA_ENABLE_BOUNDS_CHECK=On
-      clang10:
+        cmake_extra:
+      clang8:
         base_img: clang
         compiler: clang++
-        ver: 10
+        ver: 8
       clang10-debug:
         base_img: clang
         compiler: clang++
-        ver: 10
+        ver: 8
         cmake_extra: -DCMAKE_CXX_FLAGS=-fsanitize=address
         build_type: Debug
       clang-latest:
@@ -92,7 +88,7 @@ jobs:
         ver: 11.4.1
       rocm:
         base_img: rocm
-        cmake_extra: -DHIP_CLANG_PATH=/opt/rocm/llvm/bin -DENABLE_HIP=On -DENABLE_OPENMP=Off -DENABLE_CUDA=Off 
+        cmake_extra: -DHIP_CLANG_PATH=/opt/rocm/llvm/bin -DENABLE_HIP=On -DENABLE_OPENMP=Off -DENABLE_CUDA=Off
       sycl:
         base_img: oneapi
         compiler: dpcpp
