first cut requiring c++17
Only used a bit of basic c++17 to pull some of the crud out of tuple.
Now uses overload resolution for get rather than template instantiation.

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,13 @@
 .vscode/
 .cache/
 
+# codespaces clean
+.venv/
+
 # build directories
-build/
-build-*/
+/build/
+/build-*/
+/*-build/
 cmake-build-*/
 docker-*-build/
 /Debug/
